--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>java9-examples</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
+    <inceptionYear>2019</inceptionYear>
 
     <name>java9-examples</name>
     <url>http://maven.apache.org</url>
